# kineticoach

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  ci.yml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml
backend/src/: __init__.py
backend/src/app/: main.py  schemas.py  settings.py
backend/src/app/analysis/: __init__.py  math_utils.py  pose_analyzer.py  pose_processor.py  rules.py
backend/src/app/bot/: handlers.py  main.py
backend/tests/: __init__.py  test_example.py  test_math_utils.py  test_pose_analyzer.py  test_pose_processor.py  test_websocket_integration.py
backend/tools/: test_websocket.py
docs/: plan.md  task.md
frontend/: .dockerignore  .env.development  .eslintrc.cjs  .gitignore  Dockerfile  index.html  jest.config.ts  nginx.conf  package-lock.json  package.json  tsconfig.jest.json
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: ReportModal.tsx.html  index.html
frontend/src/: App.css  App.tsx
frontend/src/components/: DebugDisplay.css  DebugDisplay.tsx  FeedbackDisplay.css  FeedbackDisplay.tsx  ReportModal.css  ReportModal.test.tsx  ReportModal.tsx  SkeletonCanvas.css  SkeletonCanvas.tsx
frontend/src/lib/: pose_connections.ts
